--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atom-inc-dec-value",
   "main": "./lib/inc-dec-value",
   "version": "0.0.1",
-  "description": "An Atom package to increase / decrease number (and probably more) values.",
+  "description": "An Atom package to increase / decrease number values.",
   "activationEvents": [
     "inc-dec-value:increment",
     "inc-dec-value:decrement"
