--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atom-inc-dec-value",
+  "name": "inc-dec-value",
   "main": "./lib/inc-dec-value",
   "version": "0.0.1",
   "description": "An Atom package to increase / decrease number values.",
